# trendscope

./: .env.example  Dockerfile  LICENSING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/pricing/: index.html
scripts/: export_public.sh
src/trendscope/: __init__.py  alerts.py  anomaly.py  app.py  autonomy.py  collectors.py  collectors_competitive.py  core.py  coverage.py  credibility.py  feed.py  forecasting.py  intelligence.py  licensing.py  lifecycle.py  narratives.py  scheduler.py  service.py  snapshots.py  time_compare.py
src/trendscope/integrations/: __init__.py
tests/: conftest.py
tests/unit/: test_alerts.py  test_anomaly.py  test_app.py  test_autonomy.py  test_collectors.py  test_collectors_competitive.py  test_core.py  test_coverage.py  test_credibility.py  test_feed.py  test_forecasting.py  test_graph_sync.py  test_intelligence.py  test_kh_integration.py  test_kh_notifier.py  test_kh_sync.py  test_lifecycle.py  test_narratives.py  test_research_hooks.py  test_resilience_integration.py  test_scheduler.py  test_service.py  test_snapshots.py  test_time_compare.py
