[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trendscope"
version = "0.1.0"
description = "Market trend analysis, niche identification, and opportunity detection"
requires-python = ">=3.10"
license = "MIT"

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "uvicorn>=0.29",
]
telemetry = [
    "gozerai-telemetry @ git+https://github.com/GozerAI/gozerai-telemetry.git",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trendscope"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
